--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "scripts": {
+    "build": "tsc app.ts",
+    "start": "npm run build; node app.js"
+  },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "typescript-eslint": "^8.13.0"
+  },
+  "dependencies": {
+    "renkon-node": "file:../renkon-node"
   }
 }
