--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "tsc -noCheck app.ts; mv -f app.js app.cjs",
-    "start": "npm run build; node app.cjs -- main.js"
+    "build": "tsc -noCheck --target esnext app.ts",
+    "start": "npm run build; node app.js -- main.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -12,7 +12,7 @@
     "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
-    "renkon-node": "0.1.8",
+    "renkon-node": "file:../renkon-node",
     "ws": "^8.18.0"
   },
   "type": "module"
